PDL II/lexico.output
Nonterminals useless in grammar

   defs_s
   defs


Terminals unused in grammar

   DEFINE
   INSERT
   EXTRACT
   MINUS
   UNION
   INTERSECTION
   NEG
   COMEN
   ERR


Rules useless in grammar

  120 dec1: incs_s defs_s tipos_s
  121     | defs_s tipos_s
  122     | incs_s defs_s
  123     | defs_s

  124 defs_s: defs_s defs defs

  125 defs: DEFINE ID NUM


State 172 conflicts: 1 shift/reduce


Grammar

    0 $accept: prog $end

    1 prog: dec1 dec2
    2     | dec2

    3 dec1: incs_s tipos_s
    4     | incs_s
    5     | tipos_s

    6 dec2: vars_s procs_s main
    7     | vars_s main
    8     | procs_s main
    9     | main

   10 incs_s: incs_s incs
   11       | incs

   12 tipos_s: tipos_s tipos
   13        | tipos PYC

   14 vars_s: vars_s vars
   15       | vars

   16 procs_s: procs_s proc
   17        | proc

   18 incs: INCLUDE cabeceras

   19 cabeceras: CAB1
   20          | CAB2

   21 tipos: TYPEDEF tipo ID

   22 tipo: INT
   23     | FLOAT
   24     | CHAR
   25     | SET
   26     | ID
   27     | BOOL
   28     | STRING

   29 vars: tipo variables PYC

   30 variables: variables COMA variables_s
   31          | variables_s

   32 variables_s: variable
   33            | variable ASI expresion

   34 variable: ID
   35         | ID CORI NUM CORD

   36 proc: VOID ID PIZ params PDE cuerpo
   37     | VOID ID PIZ PDE cuerpo

   38 params: params COMA tipo ID
   39       | tipo ID

   40 sentencia: switch
   41          | if
   42          | while
   43          | in
   44          | out
   45          | proc
   46          | llamada_proc
   47          | llamada_conjunto PYC
   48          | expresion PYC

   49 switch: SWITCH PIZ ID PDE LLIZ casos_s caso_defecto LLDE
   50       | SWITCH PIZ ID PDE LLIZ caso_defecto LLDE
   51       | SWITCH PIZ ID PDE LLIZ casos_s LLDE
   52       | SWITCH PIZ ID PDE LLIZ LLDE

   53 casos_s: casos_s CASE literal PUNTOS sentencias BREAK PYC
   54        | CASE literal PUNTOS sentencias BREAK PYC
   55        | casos_s CASE literal PUNTOS BREAK PYC
   56        | CASE literal PUNTOS BREAK PYC

   57 literal: NUM
   58        | TEXTO_OUT

   59 sentencias: sentencias sentencia
   60           | sentencia

   61 caso_defecto: DEFAULT PUNTOS sentencias
   62             | DEFAULT PUNTOS

   63 bloque: LLIZ sentencias LLDE
   64       | sentencia
   65       | LLIZ LLDE

   66 if: IF expresion bloque ELSE bloque
   67   | IF expresion bloque

   68 expresion: expresion SUM expresion
   69          | expresion RES expresion
   70          | expresion MUL expresion
   71          | expresion DIV expresion
   72          | expresion AND expresion
   73          | expresion OR expresion
   74          | expresion MAYORIQ expresion
   75          | expresion MENORIQ expresion
   76          | expresion MAYORQ expresion
   77          | expresion MENORQ expresion
   78          | expresion DIST expresion
   79          | expresion II expresion
   80          | NUM
   81          | PIZ expresion PDE
   82          | NEGEXP expresion
   83          | ID
   84          | REAL
   85          | TRUE
   86          | FALSE
   87          | CARACTER
   88          | TEXTO_OUT
   89          | crea_conjunto
   90          | llamada_complementario
   91          | llamada_sivacio
   92          | llamada_length
   93          | ID ASI expresion

   94 while: WHILE PIZ expresion PDE bloque
   95      | WHILE PIZ expresion PDE PYC

   96 out: OUT PIZ TEXTO_OUT COMA ids PDE PYC
   97    | OUT PIZ TEXTO_OUT PDE PYC

   98 ids: ids COMA ID
   99    | ID

  100 in: IN PIZ OP_INOUT COMA ID PDE PYC

  101 llamada_proc: ID PIZ params_llamada PDE PYC
  102             | ID PIZ PDE PYC

  103 params_llamada: params_llamada COMA expresion
  104               | expresion

  105 main: VOID MAIN PIZ PDE cuerpo

  106 cuerpo: LLIZ vars_s sentencias LLDE
  107       | LLIZ sentencias LLDE
  108       | LLIZ vars_s LLDE
  109       | LLIZ LLDE

  110 llamada_conjunto: inserta_conjunto
  111                 | saca_conjunto
  112                 | destruye_conjunto

  113 crea_conjunto: CREATE PIZ PDE

  114 destruye_conjunto: DELETE PIZ ID PDE

  115 llamada_sivacio: EMPTY PIZ ID PDE

  116 llamada_length: LENGTH PIZ ID PDE

  117 inserta_conjunto: expresion ADDC ID

  118 saca_conjunto: expresion MINC ID

  119 llamada_complementario: COMPC expresion


Terminals, with rules where they appear

$end (0) 0
error (256)
CAB1 (258) 19
CAB2 (259) 20
CASE (260) 53 54 55 56
ID (261) 21 26 34 35 36 37 38 39 49 50 51 52 83 93 98 99 100 101 102
    114 115 116 117 118
NUM (262) 35 57 80
BREAK (263) 53 54 55 56
INT (264) 22
FLOAT (265) 23
CHAR (266) 24
SET (267) 25
TYPEDEF (268) 21
REAL (269) 84
STRING (270) 28
BOOL (271) 27
TRUE (272) 85
FALSE (273) 86
CARACTER (274) 87
TEXTO_OUT (275) 58 88 96 97
OP_INOUT (276) 100
EMPTY (277) 115
LENGTH (278) 116
VOID (279) 36 37 105
SWITCH (280) 49 50 51 52
WHILE (281) 94 95
INCLUDE (282) 18
DEFINE (283)
IF (284) 66 67
IN (285) 100
OUT (286) 96 97
DEFAULT (287) 61 62
ELSE (288) 66
CREATE (289) 113
INSERT (290)
MAIN (291) 105
EXTRACT (292)
DELETE (293) 114
MINUS (294)
UNION (295)
INTERSECTION (296)
NEG (297)
PIZ (298) 36 37 49 50 51 52 81 94 95 96 97 100 101 102 105 113 114
    115 116
PDE (299) 36 37 49 50 51 52 81 94 95 96 97 100 101 102 105 113 114
    115 116
COMEN (300)
ERR (301)
CORI (302) 35
CORD (303) 35
PUNTOS (304) 53 54 55 56 61 62
LLIZ (305) 49 50 51 52 63 65 106 107 108 109
LLDE (306) 49 50 51 52 63 65 106 107 108 109
PYC (307) 13 29 47 48 53 54 55 56 95 96 97 100 101 102
COMA (308) 30 38 96 98 100 103
ASI (309) 33 93
II (310) 79
DIST (311) 78
MENORQ (312) 77
MAYORQ (313) 76
MENORIQ (314) 75
MAYORIQ (315) 74
RES (316) 69
SUM (317) 68
DIV (318) 71
MUL (319) 70
OR (320) 73
AND (321) 72
COMPC (322) 119
MINC (323) 118
ADDC (324) 117
NEGEXP (325) 82


Nonterminals, with rules where they appear

$accept (71)
    on left: 0
prog (72)
    on left: 1 2, on right: 0
dec1 (73)
    on left: 3 4 5, on right: 1
dec2 (74)
    on left: 6 7 8 9, on right: 1 2
incs_s (75)
    on left: 10 11, on right: 3 4 10
tipos_s (76)
    on left: 12 13, on right: 3 5 12
vars_s (77)
    on left: 14 15, on right: 6 7 14 106 108
procs_s (78)
    on left: 16 17, on right: 6 8 16
incs (79)
    on left: 18, on right: 10 11
cabeceras (80)
    on left: 19 20, on right: 18
tipos (81)
    on left: 21, on right: 12 13
tipo (82)
    on left: 22 23 24 25 26 27 28, on right: 21 29 38 39
vars (83)
    on left: 29, on right: 14 15
variables (84)
    on left: 30 31, on right: 29 30
variables_s (85)
    on left: 32 33, on right: 30 31
variable (86)
    on left: 34 35, on right: 32 33
proc (87)
    on left: 36 37, on right: 16 17 45
params (88)
    on left: 38 39, on right: 36 38
sentencia (89)
    on left: 40 41 42 43 44 45 46 47 48, on right: 59 60 64
switch (90)
    on left: 49 50 51 52, on right: 40
casos_s (91)
    on left: 53 54 55 56, on right: 49 51 53 55
literal (92)
    on left: 57 58, on right: 53 54 55 56
sentencias (93)
    on left: 59 60, on right: 53 54 59 61 63 106 107
caso_defecto (94)
    on left: 61 62, on right: 49 50
bloque (95)
    on left: 63 64 65, on right: 66 67 94
if (96)
    on left: 66 67, on right: 41
expresion (97)
    on left: 68 69 70 71 72 73 74 75 76 77 78 79 80 81 82 83 84 85
    86 87 88 89 90 91 92 93, on right: 33 48 66 67 68 69 70 71 72 73
    74 75 76 77 78 79 81 82 93 94 95 103 104 117 118 119
while (98)
    on left: 94 95, on right: 42
out (99)
    on left: 96 97, on right: 44
ids (100)
    on left: 98 99, on right: 96 98
in (101)
    on left: 100, on right: 43
llamada_proc (102)
    on left: 101 102, on right: 46
params_llamada (103)
    on left: 103 104, on right: 101 103
main (104)
    on left: 105, on right: 6 7 8 9
cuerpo (105)
    on left: 106 107 108 109, on right: 36 37 105
llamada_conjunto (106)
    on left: 110 111 112, on right: 47
crea_conjunto (107)
    on left: 113, on right: 89
destruye_conjunto (108)
    on left: 114, on right: 112
llamada_sivacio (109)
    on left: 115, on right: 91
llamada_length (110)
    on left: 116, on right: 92
inserta_conjunto (111)
    on left: 117, on right: 110
saca_conjunto (112)
    on left: 118, on right: 111
llamada_complementario (113)
    on left: 119, on right: 90


state 0

    0 $accept: . prog $end

    ID       shift, and go to state 1
    INT      shift, and go to state 2
    FLOAT    shift, and go to state 3
    CHAR     shift, and go to state 4
    SET      shift, and go to state 5
    TYPEDEF  shift, and go to state 6
    STRING   shift, and go to state 7
    BOOL     shift, and go to state 8
    VOID     shift, and go to state 9
    INCLUDE  shift, and go to state 10

    prog     go to state 11
    dec1     go to state 12
    dec2     go to state 13
    incs_s   go to state 14
    tipos_s  go to state 15
    vars_s   go to state 16
    procs_s  go to state 17
    incs     go to state 18
    tipos    go to state 19
    tipo     go to state 20
    vars     go to state 21
    proc     go to state 22
    main     go to state 23


state 1

   26 tipo: ID .

    $default  reduce using rule 26 (tipo)


state 2

   22 tipo: INT .

    $default  reduce using rule 22 (tipo)


state 3

   23 tipo: FLOAT .

    $default  reduce using rule 23 (tipo)


state 4

   24 tipo: CHAR .

    $default  reduce using rule 24 (tipo)


state 5

   25 tipo: SET .

    $default  reduce using rule 25 (tipo)


state 6

   21 tipos: TYPEDEF . tipo ID

    ID      shift, and go to state 1
    INT     shift, and go to state 2
    FLOAT   shift, and go to state 3
    CHAR    shift, and go to state 4
    SET     shift, and go to state 5
    STRING  shift, and go to state 7
    BOOL    shift, and go to state 8

    tipo  go to state 24


state 7

   28 tipo: STRING .

    $default  reduce using rule 28 (tipo)


state 8

   27 tipo: BOOL .

    $default  reduce using rule 27 (tipo)


state 9

   36 proc: VOID . ID PIZ params PDE cuerpo
   37     | VOID . ID PIZ PDE cuerpo
  105 main: VOID . MAIN PIZ PDE cuerpo

    ID    shift, and go to state 25
    MAIN  shift, and go to state 26


state 10

   18 incs: INCLUDE . cabeceras

    CAB1  shift, and go to state 27
    CAB2  shift, and go to state 28

    cabeceras  go to state 29


state 11

    0 $accept: prog . $end

    $end  shift, and go to state 30


state 12

    1 prog: dec1 . dec2

    ID      shift, and go to state 1
    INT     shift, and go to state 2
    FLOAT   shift, and go to state 3
    CHAR    shift, and go to state 4
    SET     shift, and go to state 5
    STRING  shift, and go to state 7
    BOOL    shift, and go to state 8
    VOID    shift, and go to state 9

    dec2     go to state 31
    vars_s   go to state 16
    procs_s  go to state 17
    tipo     go to state 20
    vars     go to state 21
    proc     go to state 22
    main     go to state 23


state 13

    2 prog: dec2 .

    $default  reduce using rule 2 (prog)


state 14

    3 dec1: incs_s . tipos_s
    4     | incs_s .
   10 incs_s: incs_s . incs

    TYPEDEF  shift, and go to state 6
    INCLUDE  shift, and go to state 10

    $default  reduce using rule 4 (dec1)

    tipos_s  go to state 32
    incs     go to state 33
    tipos    go to state 19


state 15

    5 dec1: tipos_s .
   12 tipos_s: tipos_s . tipos

    TYPEDEF  shift, and go to state 6

    $default  reduce using rule 5 (dec1)

    tipos  go to state 34


state 16

    6 dec2: vars_s . procs_s main
    7     | vars_s . main
   14 vars_s: vars_s . vars

    ID      shift, and go to state 1
    INT     shift, and go to state 2
    FLOAT   shift, and go to state 3
    CHAR    shift, and go to state 4
    SET     shift, and go to state 5
    STRING  shift, and go to state 7
    BOOL    shift, and go to state 8
    VOID    shift, and go to state 9

    procs_s  go to state 35
    tipo     go to state 20
    vars     go to state 36
    proc     go to state 22
    main     go to state 37


state 17

    8 dec2: procs_s . main
   16 procs_s: procs_s . proc

    VOID  shift, and go to state 9

    proc  go to state 38
    main  go to state 39


state 18

   11 incs_s: incs .

    $default  reduce using rule 11 (incs_s)


state 19

   13 tipos_s: tipos . PYC

    PYC  shift, and go to state 40


state 20

   29 vars: tipo . variables PYC

    ID  shift, and go to state 41

    variables    go to state 42
    variables_s  go to state 43
    variable     go to state 44


state 21

   15 vars_s: vars .

    $default  reduce using rule 15 (vars_s)


state 22

   17 procs_s: proc .

    $default  reduce using rule 17 (procs_s)


state 23

    9 dec2: main .

    $default  reduce using rule 9 (dec2)


state 24

   21 tipos: TYPEDEF tipo . ID

    ID  shift, and go to state 45


state 25

   36 proc: VOID ID . PIZ params PDE cuerpo
   37     | VOID ID . PIZ PDE cuerpo

    PIZ  shift, and go to state 46


state 26

  105 main: VOID MAIN . PIZ PDE cuerpo

    PIZ  shift, and go to state 47


state 27

   19 cabeceras: CAB1 .

    $default  reduce using rule 19 (cabeceras)


state 28

   20 cabeceras: CAB2 .

    $default  reduce using rule 20 (cabeceras)


state 29

   18 incs: INCLUDE cabeceras .

    $default  reduce using rule 18 (incs)


state 30

    0 $accept: prog $end .

    $default  accept


state 31

    1 prog: dec1 dec2 .

    $default  reduce using rule 1 (prog)


state 32

    3 dec1: incs_s tipos_s .
   12 tipos_s: tipos_s . tipos

    TYPEDEF  shift, and go to state 6

    $default  reduce using rule 3 (dec1)

    tipos  go to state 34


state 33

   10 incs_s: incs_s incs .

    $default  reduce using rule 10 (incs_s)


state 34

   12 tipos_s: tipos_s tipos .

    $default  reduce using rule 12 (tipos_s)


state 35

    6 dec2: vars_s procs_s . main
   16 procs_s: procs_s . proc

    VOID  shift, and go to state 9

    proc  go to state 38
    main  go to state 48


state 36

   14 vars_s: vars_s vars .

    $default  reduce using rule 14 (vars_s)


state 37

    7 dec2: vars_s main .

    $default  reduce using rule 7 (dec2)


state 38

   16 procs_s: procs_s proc .

    $default  reduce using rule 16 (procs_s)


state 39

    8 dec2: procs_s main .

    $default  reduce using rule 8 (dec2)


state 40

   13 tipos_s: tipos PYC .

    $default  reduce using rule 13 (tipos_s)


state 41

   34 variable: ID .
   35         | ID . CORI NUM CORD

    CORI  shift, and go to state 49

    $default  reduce using rule 34 (variable)


state 42

   29 vars: tipo variables . PYC
   30 variables: variables . COMA variables_s

    PYC   shift, and go to state 50
    COMA  shift, and go to state 51


state 43

   31 variables: variables_s .

    $default  reduce using rule 31 (variables)


state 44

   32 variables_s: variable .
   33            | variable . ASI expresion

    ASI  shift, and go to state 52

    $default  reduce using rule 32 (variables_s)


state 45

   21 tipos: TYPEDEF tipo ID .

    $default  reduce using rule 21 (tipos)


state 46

   36 proc: VOID ID PIZ . params PDE cuerpo
   37     | VOID ID PIZ . PDE cuerpo

    ID      shift, and go to state 1
    INT     shift, and go to state 2
    FLOAT   shift, and go to state 3
    CHAR    shift, and go to state 4
    SET     shift, and go to state 5
    STRING  shift, and go to state 7
    BOOL    shift, and go to state 8
    PDE     shift, and go to state 53

    tipo    go to state 54
    params  go to state 55


state 47

  105 main: VOID MAIN PIZ . PDE cuerpo

    PDE  shift, and go to state 56


state 48

    6 dec2: vars_s procs_s main .

    $default  reduce using rule 6 (dec2)


state 49

   35 variable: ID CORI . NUM CORD

    NUM  shift, and go to state 57


state 50

   29 vars: tipo variables PYC .

    $default  reduce using rule 29 (vars)


state 51

   30 variables: variables COMA . variables_s

    ID  shift, and go to state 41

    variables_s  go to state 58
    variable     go to state 44


state 52

   33 variables_s: variable ASI . expresion

    ID         shift, and go to state 59
    NUM        shift, and go to state 60
    REAL       shift, and go to state 61
    TRUE       shift, and go to state 62
    FALSE      shift, and go to state 63
    CARACTER   shift, and go to state 64
    TEXTO_OUT  shift, and go to state 65
    EMPTY      shift, and go to state 66
    LENGTH     shift, and go to state 67
    CREATE     shift, and go to state 68
    PIZ        shift, and go to state 69
    COMPC      shift, and go to state 70
    NEGEXP     shift, and go to state 71

    expresion               go to state 72
    crea_conjunto           go to state 73
    llamada_sivacio         go to state 74
    llamada_length          go to state 75
    llamada_complementario  go to state 76


state 53

   37 proc: VOID ID PIZ PDE . cuerpo

    LLIZ  shift, and go to state 77

    cuerpo  go to state 78


state 54

   39 params: tipo . ID

    ID  shift, and go to state 79


state 55

   36 proc: VOID ID PIZ params . PDE cuerpo
   38 params: params . COMA tipo ID

    PDE   shift, and go to state 80
    COMA  shift, and go to state 81


state 56

  105 main: VOID MAIN PIZ PDE . cuerpo

    LLIZ  shift, and go to state 77

    cuerpo  go to state 82


state 57

   35 variable: ID CORI NUM . CORD

    CORD  shift, and go to state 83


state 58

   30 variables: variables COMA variables_s .

    $default  reduce using rule 30 (variables)


state 59

   83 expresion: ID .
   93          | ID . ASI expresion

    ASI  shift, and go to state 84

    $default  reduce using rule 83 (expresion)


state 60

   80 expresion: NUM .

    $default  reduce using rule 80 (expresion)


state 61

   84 expresion: REAL .

    $default  reduce using rule 84 (expresion)


state 62

   85 expresion: TRUE .

    $default  reduce using rule 85 (expresion)


state 63

   86 expresion: FALSE .

    $default  reduce using rule 86 (expresion)


state 64

   87 expresion: CARACTER .

    $default  reduce using rule 87 (expresion)


state 65

   88 expresion: TEXTO_OUT .

    $default  reduce using rule 88 (expresion)


state 66

  115 llamada_sivacio: EMPTY . PIZ ID PDE

    PIZ  shift, and go to state 85


state 67

  116 llamada_length: LENGTH . PIZ ID PDE

    PIZ  shift, and go to state 86


state 68

  113 crea_conjunto: CREATE . PIZ PDE

    PIZ  shift, and go to state 87


state 69

   81 expresion: PIZ . expresion PDE

    ID         shift, and go to state 59
    NUM        shift, and go to state 60
    REAL       shift, and go to state 61
    TRUE       shift, and go to state 62
    FALSE      shift, and go to state 63
    CARACTER   shift, and go to state 64
    TEXTO_OUT  shift, and go to state 65
    EMPTY      shift, and go to state 66
    LENGTH     shift, and go to state 67
    CREATE     shift, and go to state 68
    PIZ        shift, and go to state 69
    COMPC      shift, and go to state 70
    NEGEXP     shift, and go to state 71

    expresion               go to state 88
    crea_conjunto           go to state 73
    llamada_sivacio         go to state 74
    llamada_length          go to state 75
    llamada_complementario  go to state 76


state 70

  119 llamada_complementario: COMPC . expresion

    ID         shift, and go to state 59
    NUM        shift, and go to state 60
    REAL       shift, and go to state 61
    TRUE       shift, and go to state 62
    FALSE      shift, and go to state 63
    CARACTER   shift, and go to state 64
    TEXTO_OUT  shift, and go to state 65
    EMPTY      shift, and go to state 66
    LENGTH     shift, and go to state 67
    CREATE     shift, and go to state 68
    PIZ        shift, and go to state 69
    COMPC      shift, and go to state 70
    NEGEXP     shift, and go to state 71

    expresion               go to state 89
    crea_conjunto           go to state 73
    llamada_sivacio         go to state 74
    llamada_length          go to state 75
    llamada_complementario  go to state 76


state 71

   82 expresion: NEGEXP . expresion

    ID         shift, and go to state 59
    NUM        shift, and go to state 60
    REAL       shift, and go to state 61
    TRUE       shift, and go to state 62
    FALSE      shift, and go to state 63
    CARACTER   shift, and go to state 64
    TEXTO_OUT  shift, and go to state 65
    EMPTY      shift, and go to state 66
    LENGTH     shift, and go to state 67
    CREATE     shift, and go to state 68
    PIZ        shift, and go to state 69
    COMPC      shift, and go to state 70
    NEGEXP     shift, and go to state 71

    expresion               go to state 90
    crea_conjunto           go to state 73
    llamada_sivacio         go to state 74
    llamada_length          go to state 75
    llamada_complementario  go to state 76


state 72

   33 variables_s: variable ASI expresion .
   68 expresion: expresion . SUM expresion
   69          | expresion . RES expresion
   70          | expresion . MUL expresion
   71          | expresion . DIV expresion
   72          | expresion . AND expresion
   73          | expresion . OR expresion
   74          | expresion . MAYORIQ expresion
   75          | expresion . MENORIQ expresion
   76          | expresion . MAYORQ expresion
   77          | expresion . MENORQ expresion
   78          | expresion . DIST expresion
   79          | expresion . II expresion

    II       shift, and go to state 91
    DIST     shift, and go to state 92
    MENORQ   shift, and go to state 93
    MAYORQ   shift, and go to state 94
    MENORIQ  shift, and go to state 95
    MAYORIQ  shift, and go to state 96
    RES      shift, and go to state 97
    SUM      shift, and go to state 98
    DIV      shift, and go to state 99
    MUL      shift, and go to state 100
    OR       shift, and go to state 101
    AND      shift, and go to state 102

    $default  reduce using rule 33 (variables_s)


state 73

   89 expresion: crea_conjunto .

    $default  reduce using rule 89 (expresion)


state 74

   91 expresion: llamada_sivacio .

    $default  reduce using rule 91 (expresion)


state 75

   92 expresion: llamada_length .

    $default  reduce using rule 92 (expresion)


state 76

   90 expresion: llamada_complementario .

    $default  reduce using rule 90 (expresion)


state 77

  106 cuerpo: LLIZ . vars_s sentencias LLDE
  107       | LLIZ . sentencias LLDE
  108       | LLIZ . vars_s LLDE
  109       | LLIZ . LLDE

    ID         shift, and go to state 103
    NUM        shift, and go to state 60
    INT        shift, and go to state 2
    FLOAT      shift, and go to state 3
    CHAR       shift, and go to state 4
    SET        shift, and go to state 5
    REAL       shift, and go to state 61
    STRING     shift, and go to state 7
    BOOL       shift, and go to state 8
    TRUE       shift, and go to state 62
    FALSE      shift, and go to state 63
    CARACTER   shift, and go to state 64
    TEXTO_OUT  shift, and go to state 65
    EMPTY      shift, and go to state 66
    LENGTH     shift, and go to state 67
    VOID       shift, and go to state 104
    SWITCH     shift, and go to state 105
    WHILE      shift, and go to state 106
    IF         shift, and go to state 107
    IN         shift, and go to state 108
    OUT        shift, and go to state 109
    CREATE     shift, and go to state 68
    DELETE     shift, and go to state 110
    PIZ        shift, and go to state 69
    LLDE       shift, and go to state 111
    COMPC      shift, and go to state 70
    NEGEXP     shift, and go to state 71

    vars_s                  go to state 112
    tipo                    go to state 20
    vars                    go to state 21
    proc                    go to state 113
    sentencia               go to state 114
    switch                  go to state 115
    sentencias              go to state 116
    if                      go to state 117
    expresion               go to state 118
    while                   go to state 119
    out                     go to state 120
    in                      go to state 121
    llamada_proc            go to state 122
    llamada_conjunto        go to state 123
    crea_conjunto           go to state 73
    destruye_conjunto       go to state 124
    llamada_sivacio         go to state 74
    llamada_length          go to state 75
    inserta_conjunto        go to state 125
    saca_conjunto           go to state 126
    llamada_complementario  go to state 76


state 78

   37 proc: VOID ID PIZ PDE cuerpo .

    $default  reduce using rule 37 (proc)


state 79

   39 params: tipo ID .

    $default  reduce using rule 39 (params)


state 80

   36 proc: VOID ID PIZ params PDE . cuerpo

    LLIZ  shift, and go to state 77

    cuerpo  go to state 127


state 81

   38 params: params COMA . tipo ID

    ID      shift, and go to state 1
    INT     shift, and go to state 2
    FLOAT   shift, and go to state 3
    CHAR    shift, and go to state 4
    SET     shift, and go to state 5
    STRING  shift, and go to state 7
    BOOL    shift, and go to state 8

    tipo  go to state 128


state 82

  105 main: VOID MAIN PIZ PDE cuerpo .

    $default  reduce using rule 105 (main)


state 83

   35 variable: ID CORI NUM CORD .

    $default  reduce using rule 35 (variable)


state 84

   93 expresion: ID ASI . expresion

    ID         shift, and go to state 59
    NUM        shift, and go to state 60
    REAL       shift, and go to state 61
    TRUE       shift, and go to state 62
    FALSE      shift, and go to state 63
    CARACTER   shift, and go to state 64
    TEXTO_OUT  shift, and go to state 65
    EMPTY      shift, and go to state 66
    LENGTH     shift, and go to state 67
    CREATE     shift, and go to state 68
    PIZ        shift, and go to state 69
    COMPC      shift, and go to state 70
    NEGEXP     shift, and go to state 71

    expresion               go to state 129
    crea_conjunto           go to state 73
    llamada_sivacio         go to state 74
    llamada_length          go to state 75
    llamada_complementario  go to state 76


state 85

  115 llamada_sivacio: EMPTY PIZ . ID PDE

    ID  shift, and go to state 130


state 86

  116 llamada_length: LENGTH PIZ . ID PDE

    ID  shift, and go to state 131


state 87

  113 crea_conjunto: CREATE PIZ . PDE

    PDE  shift, and go to state 132


state 88

   68 expresion: expresion . SUM expresion
   69          | expresion . RES expresion
   70          | expresion . MUL expresion
   71          | expresion . DIV expresion
   72          | expresion . AND expresion
   73          | expresion . OR expresion
   74          | expresion . MAYORIQ expresion
   75          | expresion . MENORIQ expresion
   76          | expresion . MAYORQ expresion
   77          | expresion . MENORQ expresion
   78          | expresion . DIST expresion
   79          | expresion . II expresion
   81          | PIZ expresion . PDE

    PDE      shift, and go to state 133
    II       shift, and go to state 91
    DIST     shift, and go to state 92
    MENORQ   shift, and go to state 93
    MAYORQ   shift, and go to state 94
    MENORIQ  shift, and go to state 95
    MAYORIQ  shift, and go to state 96
    RES      shift, and go to state 97
    SUM      shift, and go to state 98
    DIV      shift, and go to state 99
    MUL      shift, and go to state 100
    OR       shift, and go to state 101
    AND      shift, and go to state 102


state 89

   68 expresion: expresion . SUM expresion
   69          | expresion . RES expresion
   70          | expresion . MUL expresion
   71          | expresion . DIV expresion
   72          | expresion . AND expresion
   73          | expresion . OR expresion
   74          | expresion . MAYORIQ expresion
   75          | expresion . MENORIQ expresion
   76          | expresion . MAYORQ expresion
   77          | expresion . MENORQ expresion
   78          | expresion . DIST expresion
   79          | expresion . II expresion
  119 llamada_complementario: COMPC expresion .

    $default  reduce using rule 119 (llamada_complementario)


state 90

   68 expresion: expresion . SUM expresion
   69          | expresion . RES expresion
   70          | expresion . MUL expresion
   71          | expresion . DIV expresion
   72          | expresion . AND expresion
   73          | expresion . OR expresion
   74          | expresion . MAYORIQ expresion
   75          | expresion . MENORIQ expresion
   76          | expresion . MAYORQ expresion
   77          | expresion . MENORQ expresion
   78          | expresion . DIST expresion
   79          | expresion . II expresion
   82          | NEGEXP expresion .

    $default  reduce using rule 82 (expresion)


state 91

   79 expresion: expresion II . expresion

    ID         shift, and go to state 59
    NUM        shift, and go to state 60
    REAL       shift, and go to state 61
    TRUE       shift, and go to state 62
    FALSE      shift, and go to state 63
    CARACTER   shift, and go to state 64
    TEXTO_OUT  shift, and go to state 65
    EMPTY      shift, and go to state 66
    LENGTH     shift, and go to state 67
    CREATE     shift, and go to state 68
    PIZ        shift, and go to state 69
    COMPC      shift, and go to state 70
    NEGEXP     shift, and go to state 71

    expresion               go to state 134
    crea_conjunto           go to state 73
    llamada_sivacio         go to state 74
    llamada_length          go to state 75
    llamada_complementario  go to state 76


state 92

   78 expresion: expresion DIST . expresion

    ID         shift, and go to state 59
    NUM        shift, and go to state 60
    REAL       shift, and go to state 61
    TRUE       shift, and go to state 62
    FALSE      shift, and go to state 63
    CARACTER   shift, and go to state 64
    TEXTO_OUT  shift, and go to state 65
    EMPTY      shift, and go to state 66
    LENGTH     shift, and go to state 67
    CREATE     shift, and go to state 68
    PIZ        shift, and go to state 69
    COMPC      shift, and go to state 70
    NEGEXP     shift, and go to state 71

    expresion               go to state 135
    crea_conjunto           go to state 73
    llamada_sivacio         go to state 74
    llamada_length          go to state 75
    llamada_complementario  go to state 76


state 93

   77 expresion: expresion MENORQ . expresion

    ID         shift, and go to state 59
    NUM        shift, and go to state 60
    REAL       shift, and go to state 61
    TRUE       shift, and go to state 62
    FALSE      shift, and go to state 63
    CARACTER   shift, and go to state 64
    TEXTO_OUT  shift, and go to state 65
    EMPTY      shift, and go to state 66
    LENGTH     shift, and go to state 67
    CREATE     shift, and go to state 68
    PIZ        shift, and go to state 69
    COMPC      shift, and go to state 70
    NEGEXP     shift, and go to state 71

    expresion               go to state 136
    crea_conjunto           go to state 73
    llamada_sivacio         go to state 74
    llamada_length          go to state 75
    llamada_complementario  go to state 76


state 94

   76 expresion: expresion MAYORQ . expresion

    ID         shift, and go to state 59
    NUM        shift, and go to state 60
    REAL       shift, and go to state 61
    TRUE       shift, and go to state 62
    FALSE      shift, and go to state 63
    CARACTER   shift, and go to state 64
    TEXTO_OUT  shift, and go to state 65
    EMPTY      shift, and go to state 66
    LENGTH     shift, and go to state 67
    CREATE     shift, and go to state 68
    PIZ        shift, and go to state 69
    COMPC      shift, and go to state 70
    NEGEXP     shift, and go to state 71

    expresion               go to state 137
    crea_conjunto           go to state 73
    llamada_sivacio         go to state 74
    llamada_length          go to state 75
    llamada_complementario  go to state 76


state 95

   75 expresion: expresion MENORIQ . expresion

    ID         shift, and go to state 59
    NUM        shift, and go to state 60
    REAL       shift, and go to state 61
    TRUE       shift, and go to state 62
    FALSE      shift, and go to state 63
    CARACTER   shift, and go to state 64
    TEXTO_OUT  shift, and go to state 65
    EMPTY      shift, and go to state 66
    LENGTH     shift, and go to state 67
    CREATE     shift, and go to state 68
    PIZ        shift, and go to state 69
    COMPC      shift, and go to state 70
    NEGEXP     shift, and go to state 71

    expresion               go to state 138
    crea_conjunto           go to state 73
    llamada_sivacio         go to state 74
    llamada_length          go to state 75
    llamada_complementario  go to state 76


state 96

   74 expresion: expresion MAYORIQ . expresion

    ID         shift, and go to state 59
    NUM        shift, and go to state 60
    REAL       shift, and go to state 61
    TRUE       shift, and go to state 62
    FALSE      shift, and go to state 63
    CARACTER   shift, and go to state 64
    TEXTO_OUT  shift, and go to state 65
    EMPTY      shift, and go to state 66
    LENGTH     shift, and go to state 67
    CREATE     shift, and go to state 68
    PIZ        shift, and go to state 69
    COMPC      shift, and go to state 70
    NEGEXP     shift, and go to state 71

    expresion               go to state 139
    crea_conjunto           go to state 73
    llamada_sivacio         go to state 74
    llamada_length          go to state 75
    llamada_complementario  go to state 76


state 97

   69 expresion: expresion RES . expresion

    ID         shift, and go to state 59
    NUM        shift, and go to state 60
    REAL       shift, and go to state 61
    TRUE       shift, and go to state 62
    FALSE      shift, and go to state 63
    CARACTER   shift, and go to state 64
    TEXTO_OUT  shift, and go to state 65
    EMPTY      shift, and go to state 66
    LENGTH     shift, and go to state 67
    CREATE     shift, and go to state 68
    PIZ        shift, and go to state 69
    COMPC      shift, and go to state 70
    NEGEXP     shift, and go to state 71

    expresion               go to state 140
    crea_conjunto           go to state 73
    llamada_sivacio         go to state 74
    llamada_length          go to state 75
    llamada_complementario  go to state 76


state 98

   68 expresion: expresion SUM . expresion

    ID         shift, and go to state 59
    NUM        shift, and go to state 60
    REAL       shift, and go to state 61
    TRUE       shift, and go to state 62
    FALSE      shift, and go to state 63
    CARACTER   shift, and go to state 64
    TEXTO_OUT  shift, and go to state 65
    EMPTY      shift, and go to state 66
    LENGTH     shift, and go to state 67
    CREATE     shift, and go to state 68
    PIZ        shift, and go to state 69
    COMPC      shift, and go to state 70
    NEGEXP     shift, and go to state 71

